manifests/manifestos-adicionais/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus-grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.dtechdevops.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana  # Substitua pelo nome do seu serviço Prometheus-Grafana
            port:
              number: 80
